--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/public/icons/White Black Bold Minimalist Beauty Blogger Logo-fotor-20231228214040.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ramez</title>
   </head>
