--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/public/icons/White Black Bold Minimalist Beauty Blogger Logo-fotor-20231228214040.png" />
+    <link rel="icon" type="image/svg+xml" href="/public/icons/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ramez</title>
+    <title>Muneer</title>
   </head>
   <body>
     <div id="root"></div>
